--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,6 +98,8 @@
  * Site footer
  */
 .site-footer {
+    color: white;
+    background-color: $brand-color;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
