--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -99,7 +99,7 @@
  */
 .site-footer {
     color: white;
-    background-color: black;
+    background-color: gray;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
